feat: add native support